1.04	2017-05-04
		- Bug fix: Character appearance at end of terminal line

1.03	2017-05-02
		- Fix for 'Bug #121293 for Term-ReadLine-Tiny: Experimental pop on scalar is now forbidden'

1.02	2017-05-02
		- POD changes
		- Little fixes

1.01	2017-04-24
		- POD fixes and changes
		- autohistory feature by minline

1.00	2017-04-22
		- First release